# teledex

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
deploy/: teledex.service
docs/: PLAN.md
src/teledex/: __init__.py  __main__.py  app.py  codex_app_server_exec.py  codex_runner.py  config.py  discord_api.py  formatting.py  storage.py  telegram_api.py
tests/: test_app.py  test_codex_app_server_exec.py  test_codex_runner.py  test_config.py  test_formatting.py  test_storage.py  test_telegram_api.py
